Show metadata information of X3D files.

--- a/src/main/resources/com/cathive/x3d/viewer/Messages.properties
+++ b/src/main/resources/com/cathive/x3d/viewer/Messages.properties
@@ -2,4 +2,4 @@ app.name = X3D Viewer
 app.title = X3D Viewer
 app.description = A simple viewer for your X3D models and scenes
 
-button.open.text = Open...
+button.open.text = Open\u2026
